<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/practice_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/background_buttons_home"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/new_test_tv">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/questions"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/question_count_picker"
        app:layout_constraintEnd_toStartOf="@+id/question_count_picker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_count_picker"
        android:layout_marginLeft="8dp" />

    <NumberPicker
        android:id="@+id/question_count_picker"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />


    <Switch
        android:id="@+id/q_performance_sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/difficulty_sw"
        app:layout_constraintStart_toEndOf="@+id/difficulty_sw"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_sw" />

    <Switch
        android:id="@+id/study_mode_sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/question_count_picker"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/question_count_picker"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Switch
        android:id="@+id/difficulty_sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/timer_sw"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toEndOf="@+id/timer_sw"
        app:layout_constraintTop_toBottomOf="@+id/timer_sw" />

    <Switch
        android:id="@+id/timer_sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/study_mode_sw"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toEndOf="@+id/study_mode_sw"
        app:layout_constraintTop_toBottomOf="@+id/study_mode_sw" />

    <TextView
        android:id="@+id/study_mode_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/study_mode"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/study_mode_sw"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/study_mode_sw" />

    <TextView
        android:id="@+id/textView3"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        app:layout_constraintBottom_toTopOf="@+id/timer_sw"
        app:layout_constraintStart_toStartOf="@+id/study_mode_tv"
        app:layout_constraintTop_toBottomOf="@+id/timer_sw" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/difficulty_sw"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_sw" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_history"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/q_performance_sw"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/q_performance_sw" />
</android.support.constraint.ConstraintLayout>