<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.android.example.oca_808.HomeActivity">

    <Button
        android:id="@+id/test_button"
        android:layout_width="0dp"
        android:layout_height="89dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_buttons_home"
        android:elevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/practice_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/practice_button"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_buttons_home"
        android:elevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/train_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_button" />

    <Button
        android:id="@+id/train_button"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_buttons_home"
        android:elevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/stats_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/practice_button" />

    <Button
        android:id="@+id/stats_button"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_buttons_home"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/train_button" />
    <TextView
        android:id="@+id/text_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/test"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/test_button"
        app:layout_constraintEnd_toEndOf="@+id/test_button"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/test_button"
        app:layout_constraintTop_toTopOf="@+id/test_button"
        app:layout_constraintVertical_bias="0.483" />
    <TextView
        android:id="@+id/stats_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/stats"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/stats_button"
        app:layout_constraintEnd_toEndOf="@+id/stats_button"
        app:layout_constraintStart_toStartOf="@+id/stats_button"
        app:layout_constraintTop_toTopOf="@+id/stats_button" />

    <TextView
        android:id="@+id/training_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/train"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/train_button"
        app:layout_constraintEnd_toEndOf="@+id/train_button"
        app:layout_constraintStart_toStartOf="@+id/train_button"
        app:layout_constraintTop_toTopOf="@+id/train_button" />


    <TextView
        android:id="@+id/practice_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Practice"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/practice_button"
        app:layout_constraintEnd_toEndOf="@+id/practice_button"
        app:layout_constraintStart_toStartOf="@+id/practice_button"
        app:layout_constraintTop_toTopOf="@+id/practice_button"
        app:layout_constraintVertical_bias="0.511" />


</android.support.constraint.ConstraintLayout>
